--- a/JustDanceAssistant/style.css
+++ b/JustDanceAssistant/style.css
@@ -127,7 +127,7 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-flow: column;
+    flex-flow: row;
 }
 
 #sort-button {
