--- a/JustDanceAssistant/style.css
+++ b/JustDanceAssistant/style.css
@@ -9,8 +9,16 @@ body {
 html,
 body {
     color: #aaaaaa;
-    background-color: #222222;
+    background-color: transparent;
     font-family: 'Meiryo';
+}
+
+body {
+    background-image: url('./img/bg-01.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
 }
 
 h1,
@@ -24,7 +32,9 @@ h6 {
 
 main {
     margin: 0 auto;
+    padding: 40px;
     max-width: 920px;
+    background-color: #00000077;
 }
 
 #song-items {
@@ -168,6 +178,14 @@ main {
     border-color: #aaaaaa;
 }
 
+#search {
+    margin: 10px 0;
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
 #search input {
     margin: auto 0;
     width: 20em;
@@ -180,6 +198,26 @@ main {
     border-radius: calc(1em + 5px);
     letter-spacing: .075em;
     box-sizing: border-box;
+}
+
+#search button {
+    height: 100%;
+    margin-left: 10px;
+    padding: 0 20px;
+    color: inherit;
+    background-color: transparent;
+    border: 1px solid #666666;
+    border-radius: 6px;
+    box-sizing: border;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: .25s ease background-color;
+    transition: .25s ease color;
+}
+
+#search button:hover {
+    color: white;
+    background-color: #3a3ab9;
 }
 
 #view-container {
